--- a/templates/fiche/edit.html.twig
+++ b/templates/fiche/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Fiche{% endblock %}
 
 {% block body %}
-    <h1>Edit Fiche</h1>
+    <h1>Modifier la Fiche</h1>
 
     {{ include('fiche/_form.html.twig', {'button_label': 'Modifier'}) }}
 
