--- a/templates/base1.html.twig
+++ b/templates/base1.html.twig
@@ -92,9 +92,9 @@ The above copyright notice and this permission notice shall be included in all c
 							<span class="navbar-toggler-icon icon-bar"></span>
 						</button>
 						<div class="collapse navbar-collapse justify-content-end">
-							<form class="navbar-form">
+							<form class="navbar-form" action="{{ path('search_admin') }}" method="POST">
 								<div class="input-group no-border">
-									<input type="text" value="" class="form-control" placeholder="Search...">
+									<input type="text" value="" name="inp" class="form-control" placeholder="Search...">
 									<button type="submit" class="btn btn-white btn-round btn-just-icon">
 										<i class="material-icons">search</i>
 										<div class="ripple-container"></div>
