--- a/templates/medicament/new.html.twig
+++ b/templates/medicament/new.html.twig
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 
-					<button type="submit" class="btn btn-primary pull-right btn-round">Ajouter</button>
+					<button type="submit" class="btn btn-primary pull-right btn-round" onclick="f()">Ajouter</button>
 					<div class="clearfix"></div>
 					{{ form_end(form) }}
 				</div>
@@ -52,4 +52,9 @@
 	</div>
 
 	<a href="{{ path('medicament_index1') }}" class="btn btn-info btn-round">Retourner à liste</a>
+	<script>
+		function f (){
+			window.alert("Voulez-vous vraiment continuer ?");
+		}
+	</script
 {% endblock %}
