--- a/templates/pharmacie/_form.html.twig
+++ b/templates/pharmacie/_form.html.twig
@@ -3,5 +3,10 @@
     {{ form_widget(form.adr, {'attr' : {'class' : 'form-control' }}) }}
     {{ form_widget(form.gouv, {'attr' : {'class' : 'form-control' }}) }}
     {{ form_widget(form.img_pat, {'attr' : {'class' : 'form-control' }}) }}
-    <button class="btn btn-round">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-round" onclick="f()">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+<script>
+    function f (){
+        window.alert("Voulez-vous vraiment continuer ?");
+    }
+</script
